hphp/hack/test/typecheck/T90599414.php.like_types.exp
File "T90599414.php", line 6, characters 3-10:
Invalid index type for this Map (Typing[4324])
  File "T90599414.php", line 5, characters 8-13:
  Expected `arraykey` because type parameter `Tk` of `HH\Map` could not be determined. Please add explicit type parameters to the invocation of `HH\Map`
  File "T90599414.php", line 6, characters 6-9:
  But got `null`
File "T90599414.php", line 6, characters 3-10:
This value is not a valid key type for this container (Typing[4298])
  File "T90599414.php", line 5, characters 8-13:
  This container is an object of type Map<[unresolved], [unresolved]>
  File "T90599414.php", line 6, characters 6-9:
  Null cannot be used as a key for an object of type Map<[unresolved], [unresolved]>
